--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
 .DS_Store
 Vue_basic/vuex/node_modules
-/dist
+Vue_basic/vuex/dist
 
 
 # local env files
-.env.local
-.env.*.local
+Vue_basic/vuex/.env.local
+Vue_basic/vuex/.env.*.local
 
 # Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+Vue_basic/vuex/npm-debug.log*
+Vue_basic/vuex/yarn-debug.log*
+Vue_basic/vuex/yarn-error.log*
+Vue_basic/vuex/pnpm-debug.log*
 
 # Editor directories and files
 .idea
